Added norox's patch from Ticket #478